[gd_scene load_steps=12 format=2]

[ext_resource path="res://Events/getGear.gd" type="Script" id=1]
[ext_resource path="res://UI/Shapes/question.png" type="Texture" id=2]
[ext_resource path="res://UI/Shapes/squareshadow.png" type="Texture" id=3]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Gear/weaponIcon.png" type="Texture" id=5]
[ext_resource path="res://UI/Shapes/squareglow.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 82, 36 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 37 )

[sub_resource type="DynamicFont" id=4]
size = 46
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
position = Vector2( 304, 0 )
z_index = 11
script = ExtResource( 1 )

[node name="add" type="Node2D" parent="."]
position = Vector2( 310, 752 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="add"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -73.0
margin_top = -46.0
margin_right = 817.0
margin_bottom = 404.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="add"]
margin_left = -62.0
margin_top = -33.0
margin_right = 455.0
margin_bottom = 184.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
patch_margin_left = 100
patch_margin_top = 99
patch_margin_right = 100
patch_margin_bottom = 99
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="add"]
margin_left = -57.0
margin_top = -28.0
margin_right = 89.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Add to bag"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonAdd" type="TextureButton" parent="add"]
margin_left = -66.0
margin_top = -37.0
margin_right = 98.0
margin_bottom = 36.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="add"]
visible = false
modulate = Color( 0.760784, 0.694118, 0.556863, 0.235294 )
margin_left = -76.0
margin_top = -46.0
margin_right = 1754.0
margin_bottom = 854.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moveAreaAdd" type="Area2D" parent="add"]
visible = false
collision_mask = 0

[node name="moveCollision" type="CollisionShape2D" parent="add/moveAreaAdd"]
position = Vector2( 16, -1 )
shape = SubResource( 2 )

[node name="leave" type="Node2D" parent="."]
position = Vector2( 342, 848 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="leave"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -73.0
margin_top = -52.0
margin_right = 507.0
margin_bottom = 398.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="leave"]
margin_left = -62.0
margin_top = -39.0
margin_right = 248.0
margin_bottom = 178.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
patch_margin_left = 100
patch_margin_top = 99
patch_margin_right = 97
patch_margin_bottom = 104
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="leave"]
margin_left = -56.0
margin_top = -32.0
margin_right = 25.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Leave"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonLeave" type="TextureButton" parent="leave"]
margin_left = -66.0
margin_top = -43.0
margin_right = 34.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="leave"]
visible = false
modulate = Color( 0.760784, 0.694118, 0.556863, 0.235294 )
margin_left = -78.0
margin_top = -51.0
margin_right = 1162.0
margin_bottom = 859.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moveAreaLeave" type="Area2D" parent="leave"]
visible = false
collision_mask = 0

[node name="moveCollision" type="CollisionShape2D" parent="leave/moveAreaLeave"]
position = Vector2( -16, -6 )
shape = SubResource( 3 )

[node name="gear" type="Node2D" parent="."]
position = Vector2( -459, 504 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="gearType" type="Sprite" parent="gear"]
position = Vector2( -50, -45.0001 )
scale = Vector2( 0.302, 0.302 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="gear"]
margin_left = -192.0
margin_top = -99.0
margin_right = 92.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 4 )
text = "Gear"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="what" type="Node2D" parent="."]
position = Vector2( 319, 677 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="what"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -183.0
margin_top = -58.9999
margin_right = 1712.0
margin_bottom = 471.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="what"]
modulate = Color( 0.654902, 0.611765, 0.556863, 1 )
margin_left = -173.0
margin_top = -46.0
margin_right = 722.0
margin_bottom = 162.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
patch_margin_left = 105
patch_margin_top = 99
patch_margin_right = 100
patch_margin_bottom = 103
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="what"]
margin_left = -153.0
margin_top = -36.0
margin_right = 164.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 0.843137 )
text = "What will you do?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="add/buttonAdd" to="." method="_on_buttonAdd_pressed"]
[connection signal="area_entered" from="add/moveAreaAdd" to="." method="_on_moveAreaAdd_area_entered"]
[connection signal="area_exited" from="add/moveAreaAdd" to="." method="_on_moveAreaAdd_area_exited"]
[connection signal="pressed" from="leave/buttonLeave" to="." method="_on_buttonLeave_pressed"]
[connection signal="area_entered" from="leave/moveAreaLeave" to="." method="_on_moveAreaLeave_area_entered"]
[connection signal="area_exited" from="leave/moveAreaLeave" to="." method="_on_moveAreaLeave_area_exited"]
